myteo/test/parser/ast/pattern/empty_record_error.exp
Error: Record must have at least one field
test/parser/ast/pattern/empty_record_error.myte:3:4-10
 3 | val Rec {}: int = 1
   |     ^^^^^^