myteo/test/parser/ast/pattern/empty_record_error.myte
module test

val Rec {}: int = 1